// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBlock match snapshot TwoColsLayout simple 1`] = `
<div>
  <div
    class="css-n3fybt"
  />
  <div
    class="css-10a73ai"
  >
    <div
      class="css-hx5t32"
      width="402"
    >
      <div
        class="css-1ict1r5"
        width="402"
      >
        Hello World
      </div>
    </div>
    <div
      class="css-s1f7js"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`TitleBlock match snapshot TwoColsLayout with Array in left 1`] = `
<div>
  <div
    class="css-n3fybt"
  />
  <div
    class="css-10a73ai"
  >
    <div
      class="css-hx5t32"
      width="402"
    >
      <div
        class="css-1ict1r5"
        width="402"
      >
        hello world One
        hello world Two
      </div>
    </div>
    <div
      class="css-s1f7js"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1jv49re-MuiButtonBase-root-MuiButton-root"
        data-testid="button"
        tabindex="0"
        type="button"
      >
        Hello world
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
